# fastapi_healthcheck_sqlalchemy

./: README.md  pyproject.toml
fastapi_healthcheck_sqlalchemy/: __init__.py  service.py
